release v1.1